--- a/app/components/components.css
+++ b/app/components/components.css
@@ -1,70 +1,153 @@
-.homeCard {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  .characterCard {
-    width: 50vmin;
-    height: 20vmin;
-    margin: 2vmin;
-    border-radius: 2vmin;
-    border: 0.2vmin solid rgb(129, 104, 157);
-    background-color: rgb(52, 52, 76);
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    color: rgb(243, 220, 254);
-    transition: 0.3s;
-    padding: 2vmin;
-    display: flex;
-    align-items: center;
-  }
-  
-  .characterCard:hover {
-    box-shadow: 0 8px 16px 0 rgba(255, 255, 255, 0.2);
-    background-color: rgba(44, 44, 63, 0.618);
-  }
-  
-  .container {
-    padding-left: 3vmin;
-    padding-right: 2vmin;
-  }
+/* Header styles */
 
-  .characterName {
-    margin-top: 0;
-    margin-bottom: 0;
-  }
+.homeHeader {
+  max-width: 100%;
+  height: 35vmin;
+  background-color: rgba(71, 79, 122, 0.703);
+  padding: 2vmin;
+  box-shadow: -2px 4px 13px 10px rgba(71, 79, 122, 0.703);
+}
 
-  .section1 {
-    padding-top: 1vmin;
-    margin-bottom: 4vmin;
-  }
+.headerIcon {
+  width: 5vmin;
+  height: 5vmin;
+  margin-right: 1vmin;
+}
 
-  .section2 {
-    margin-bottom: 2vmin;
-  }
+.homeTitle {
+  font-size: 15vmin;
+  display: flex;
+  justify-content: center;
+  margin-top: 4vmin;
+  color: rgb(240, 248, 255);
+  font-family: monospace;
+  text-shadow: 1px 3px 0px rgb(0 0 0);
+}
 
-  .originName {
-    margin-top: 0;
-    margin-bottom: 0;
+@media (max-width: 1010px) {
+  .homeTitle {
+    font-size: 13vmin;
   }
+}
 
-  .statusSpeciesSpan, .originSpan {
-    font-size: 2vmin;
+@media (max-width: 888px) {
+  .homeTitle {
+    font-size: 11vmin;
   }
+}
 
-  .originSpan {
-    color: rgb(161, 141, 165);
-  }
+/* Search bar styles */
 
-  .containerImage {
-    display: flex;
-  }
+.searchBar {
+  width: 30vmin;
+  border-radius: 3vmin;
+  display: flex;
+}
 
-  .characterImage {
-    width: 20vmin;
-    height: 20vmin;
-    border-radius: 2vmin;
-    margin: 0;
+input[type="search"], 
+.searchButton {
+  height: 6vmin;
+  border: 0.2vmin solid rgb(129, 104, 157);
+  font-size: 2vmin;
+  color: rgba(240, 248, 255, 0.734);
+}
+
+input[type="search"] {
+  width: 30vmin;
+  padding: 2vmin;
+  background-color: rgb(36, 39, 54);
+  border-radius: 3vmin;
+  appearance: none;
+  transition: all 0.3s cubic-bezier(0.4, 0, 1, 1);
+}
+
+.searchButton {
+  display: none; 
+  width: 6vmin;
+  background-color: rgba(129, 104, 157, 0.388);
+  border-radius: 0 2vmin 2vmin 0;
+}
+
+input[type="search"]:not(:placeholder-shown) {
+  border-radius: 2vmin 0 0 2vmin;
+  width: calc(100% - 1vmin);
+  + button {
+    display: block;
   }
+}
+
+input[type="search"]:focus {
+  outline: none;
+}
+
+
+/* Character cards styles */
+
+.characterCard {
+  width: 50vmin;
+  height: 20vmin;
+  margin: 2vmin;
+  border-radius: 2vmin;
+  border: 0.2vmin solid rgb(129, 104, 157);
+  background-color: rgb(52, 52, 76);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  color: rgb(248, 232, 255);
+  transition: 0.3s;
+  padding: 2vmin;
+  display: flex;
+  align-items: center;
+}
+
+.characterCard:hover {
+  box-shadow: 0 8px 16px 0 rgba(255, 255, 255, 0.2);
+  background-color: rgba(44, 44, 63, 0.618);
+}
+
+.container {
+  padding-left: 3vmin;
+  padding-right: 2vmin;
+}
+
+.characterName {
+  font-size: 2.6vmin;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.section1 {
+  padding-top: 1.5vmin;
+  margin-bottom: 4vmin;
+}
+
+.section2 {
+  margin-bottom: 2vmin;
+}
+
+.originName {
+  font-size: 2.3vmin;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.statusSpeciesSpan,
+.originSpan {
+  font-size: 2vmin;
+}
+
+.originSpan {
+  color: rgb(242, 204, 250);
+}
+
+.containerImage {
+  display: flex;
+}
+
+.characterImage {
+  width: 20vmin;
+  height: 20vmin;
+  border-radius: 2vmin;
+  margin: 0;
+}
 
 .alive {
   height: 1vmin;
