--- a/app/components/components.css
+++ b/app/components/components.css
@@ -40,6 +40,7 @@
 
 .search {
   display: flex;
+  gap: 0.8vmin;
 }
 
 .searchBar {
@@ -49,18 +50,23 @@
 }
 
 input[type="search"], 
-.searchButton {
+.searchButton,
+.optionsButton {
   height: 6vmin;
   border: 0.2vmin solid rgb(129, 104, 157);
   font-size: 2vmin;
   color: rgba(240, 248, 255, 0.734);
 }
 
+input[type="search"],
+.optionsButton {
+  background-color: rgb(36, 39, 54);
+  border-radius: 3vmin;
+}
+
 input[type="search"] {
   width: 30vmin;
   padding: 2vmin;
-  background-color: rgb(36, 39, 54);
-  border-radius: 3vmin;
   appearance: none;
   transition: all 0.3s cubic-bezier(0.4, 0, 1, 1);
 }
@@ -70,6 +76,23 @@ input[type="search"] {
   width: 6vmin;
   background-color: rgba(129, 104, 157, 0.388);
   border-radius: 0 2vmin 2vmin 0;
+}
+
+.optionsButton {
+  width: 11vmin;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.optionsButton:hover {
+  background-color: rgba(129, 104, 157, 0.234);
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+}
+
+.optionsButton:on-click {
+  background-color: rgba(0, 0, 0, 0.234);
 }
 
 input[type="search"]:not(:placeholder-shown) {
@@ -181,4 +204,12 @@ input[type="search"]:focus {
   border-radius: 50%;
   display: inline-block;
   vertical-align: middle;
+}
+
+/* Footer style */
+
+.footerDiv {
+  height: 17vmin;
+  background-color: rgba(250, 235, 215, 0.56);
+  margin-top: 5vmin;
 }
