--- a/app/components/components.css
+++ b/app/components/components.css
@@ -49,22 +49,13 @@
   display: flex;
 }
 
-input[type="search"], 
-.searchButton,
-.optionsButton {
+input[type="search"] {
   height: 6vmin;
   border: 0.2vmin solid rgb(129, 104, 157);
   font-size: 2vmin;
   color: rgba(240, 248, 255, 0.734);
-}
-
-input[type="search"],
-.optionsButton {
   background-color: rgb(36, 39, 54);
   border-radius: 3vmin;
-}
-
-input[type="search"] {
   width: 30vmin;
   padding: 2vmin;
   appearance: none;
@@ -86,19 +77,18 @@ input[type="search"] {
 }
 
 .optionsButton:hover {
-  background-color: rgba(129, 104, 157, 0.234);
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
+  background-color: rgba(129, 104, 157, 0.199);
+  transition: 0.1s;
 }
 
-.optionsButton:on-click {
-  background-color: rgba(0, 0, 0, 0.234);
+.optionsButton:focus{
+  background-color: aqua;
 }
 
 input[type="search"]:not(:placeholder-shown) {
   border-radius: 2vmin 0 0 2vmin;
   width: calc(100% - 1vmin);
-  + button {
+  + .searchButton {
     display: block;
   }
 }
