--- a/app/components/components.css
+++ b/app/components/components.css
@@ -43,10 +43,10 @@
   gap: 0.8vmin;
 }
 
-.searchBar {
+.searchBar,
+input[type="search"] {
   width: 30vmin;
   border-radius: 3vmin;
-  display: flex;
 }
 
 input[type="search"] {
@@ -55,18 +55,19 @@ input[type="search"] {
   font-size: 2vmin;
   color: rgba(240, 248, 255, 0.734);
   background-color: rgb(36, 39, 54);
-  border-radius: 3vmin;
-  width: 30vmin;
   padding: 2vmin;
   appearance: none;
   transition: all 0.3s cubic-bezier(0.4, 0, 1, 1);
 }
 
-.searchButton {
-  display: none; 
-  width: 6vmin;
-  background-color: rgba(129, 104, 157, 0.388);
-  border-radius: 0 2vmin 2vmin 0;
+input[type="search"]:not(:placeholder-shown) {
+  border-radius: 2vmin;
+  width: 28vmin;
+  background-color: rgb(41, 43, 58);
+}
+
+input[type="search"]:focus {
+  outline: none;
 }
 
 .optionsButton {
@@ -82,21 +83,8 @@ input[type="search"] {
 }
 
 .optionsButton:focus{
-  background-color: aqua;
+  background-color: rgba(129, 104, 157, 0.388);
 }
-
-input[type="search"]:not(:placeholder-shown) {
-  border-radius: 2vmin 0 0 2vmin;
-  width: calc(100% - 1vmin);
-  + .searchButton {
-    display: block;
-  }
-}
-
-input[type="search"]:focus {
-  outline: none;
-}
-
 
 /* Cards styles */
 
@@ -149,6 +137,16 @@ input[type="search"]:focus {
 
 .section2 {
   margin-bottom: 2vmin;
+}
+
+.section3 {
+  margin-bottom: 2vmin;
+  display: flex;
+  gap: 8vmin;
+}
+
+.locationType {
+  width: 20vmin;
 }
 
 span + h4 {
