--- a/app/page.css
+++ b/app/page.css
@@ -47,6 +47,10 @@ button {
   cursor: pointer;
 }
 
+.notVisibleButton {
+  display: none;
+}
+
 button:active {
   background-color: rgb(25, 28, 44);
 }
