--- a/app/components/components.css
+++ b/app/components/components.css
@@ -1,11 +1,13 @@
 /* Header styles */
 
-.homeHeader {
+header {
   max-width: 100%;
   height: 35vmin;
   background-color: rgba(71, 79, 122, 0.703);
   padding: 2vmin;
   box-shadow: -2px 4px 13px 10px rgba(71, 79, 122, 0.703);
+  display: flex;
+  flex-direction: column;
 }
 
 .headerIcon {
@@ -196,7 +198,23 @@ div span:first-child {
 /* Footer style */
 
 footer {
-  height: 17vmin;
-  background-color: rgba(250, 235, 215, 0.56);
+  height: 13vmin;
+  max-width: 100%;
   margin-top: 5vmin;
+  background-color: rgba(94, 81, 115, 0.56);
+  box-shadow: 0px 7px 5px 11px rgba(94, 81, 115, 0.56);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+footer h3 {
+  color: rgb(226, 222, 255);
+  font-size: 2vmin;
+  font-weight: 300;
+  margin-left: 2vmin;
+}
+
+footer a {
+  margin-right: 2vmin;
 }
