--- a/app/page.css
+++ b/app/page.css
@@ -3,16 +3,14 @@ body {
   background-color: rgb(36, 39, 54);
 }
 
-header {
-  display: flex;
-  flex-direction: column;
+.line,
+.line2 {
+  box-shadow: 0px 9px 20px 3px rgba(144, 0, 86, 0.2);
+  max-width: 100%;
 }
 
-.line {
-  box-shadow: 0px 5px 18px 4px rgba(255, 208, 236, 0.771);
-  max-width: 100%;
-  margin: 0;
-  display: flex;
+.line2 {
+  margin-top: 3vmin;
 }
 
 .homeCard {
