--- a/app/components/components.css
+++ b/app/components/components.css
@@ -96,6 +96,7 @@ input[type="search"]:focus {
 /* Cards styles */
 
 .card,
+.locationCard,
 .cardMax {
   width: 50vmin;
   height: 20vmin;
@@ -111,18 +112,20 @@ input[type="search"]:focus {
   align-items: center;
 }
 
-.card:hover {
+.card:hover,
+.locationCard:hover {
   box-shadow: 0 8px 16px 0 rgba(255, 255, 255, 0.2);
   background-color: rgba(44, 44, 63, 0.618);
+  cursor: pointer;
+}
+
+.locationCard:hover {
+  cursor: auto;
 }
 
 .container {
   padding-left: 3vmin;
   padding-right: 2vmin;
-}
-
-.containerImage {
-  display: flex;
 }
 
 .cardImage {
@@ -201,8 +204,19 @@ div span:first-child {
   vertical-align: middle;
 }
 
+/* Extended cards styles */
+
 .cardMax {
-  height: 40vmin;
+  height: 50vmin;
+  transition: all 2s linear(0 0%, 0.22 2.1%, 0.86 6.5%, 1.11 8.6%, 1.3 10.7%, 1.35 11.8%, 1.37 12.9%, 1.37 13.7%, 1.36 14.5%, 1.32 16.2%, 1.03 21.8%, 0.94 24%, 0.89 25.9%, 0.88 26.85%, 0.87 27.8%, 0.87 29.25%, 0.88 30.7%, 0.91 32.4%, 0.98 36.4%, 1.01 38.3%, 1.04 40.5%, 1.05 42.7%, 1.05 44.1%, 1.04 45.7%, 1 53.3%, 0.99 55.4%, 0.98 57.5%, 0.99 60.7%, 1 68.1%, 1.01 72.2%, 1 86.7%, 1 100%)
+}
+
+.cardMax:hover {
+  cursor: pointer;
+}
+
+.containerMaxImage {
+  margin-bottom: 25vmin;
 }
 
 /* Footer style */
